--- a/Machine_Learning_Study_Note.ipynb
+++ b/Machine_Learning_Study_Note.ipynb
@@ -8,7 +8,8 @@
       "provenance": [],
       "collapsed_sections": [
         "WDEm3xaPBIlR",
-        "hJdTYb6oBIoK"
+        "hJdTYb6oBIoK",
+        "wEWTbV4sgKFT"
       ],
       "include_colab_link": true
     },
@@ -213,7 +214,7 @@
         "\n",
         "*   We can substitute our actual cost function and our actual hypothesis function and modify the equation to :  \n",
         "\n",
-        "$\\begin{align*} \\text{repeat until convergence: } \\lbrace & \\newline \\theta_0 := & \\theta_0 - \\alpha \\frac{1}{m} \\sum\\limits_{i=1}^{m}(h_\\theta(x_{i}) - y_{i}) \\newline \\theta_1 := & \\theta_1 - \\alpha \\frac{1}{m} \\sum\\limits_{i=1}^{m}\\left((h_\\theta(x_{i}) - y_{i}) x_{i}\\right) \\newline \\rbrace& \\end{align*}$\n",
+        "\\begin{align*} \\text{repeat until convergence: } \\lbrace & \\newline \\theta_0 := & \\theta_0 - \\alpha \\frac{1}{m} \\sum\\limits_{i=1}^{m}(h_\\theta(x_{i}) - y_{i}) \\newline \\theta_1 := & \\theta_1 - \\alpha \\frac{1}{m} \\sum\\limits_{i=1}^{m}\\left((h_\\theta(x_{i}) - y_{i}) x_{i}\\right) \\newline \\rbrace& \\end{align*}\n",
         "\n",
         "\n",
         "*    The following is a derivation of $\\frac {\\partial}{\\partial \\theta_j}J(\\theta)$for a single example :  \n",
